--- a/dillo/templates/dillo/rigs/rig_form_update.pug
+++ b/dillo/templates/dillo/rigs/rig_form_update.pug
@@ -4,18 +4,19 @@
 | {% load i18n %}
 | {% load crispy_forms_tags %}
 
-
 | {% block content_card %}
-
 .card
-	.card-header
-		h2 Update Rig
+  .card-header
+    h2 Update Rig
 
-	.card-body
-		form(method="post", enctype="multipart/form-data")
-			| {% csrf_token %}
-			| {{ form | crispy }}
-			input.btn.btn-primary.btn-block.my-4(type="submit" value="Update")
+  .card-body
+    form(method="post", enctype="multipart/form-data")
+      | {% csrf_token %}
+      | {{ form | crispy }}
+
+    .card-cta
+      button.btn.btn-primary(type="submit")
+        span {% trans 'Update Rig' %}
 
 | {% endblock content_card %}
 
@@ -26,5 +27,5 @@
 | {% block javascript_extra %}
 script(src="{% static 'js/vendor/unbundled-jquery-select2-4.0.13.min.js' %}", type="text/javascript", charset="utf-8")
 script.
-	$('#id_software').select2();
+  $('#id_software').select2();
 | {% endblock javascript_extra %}
