--- a/dillo/templates/dillo/theater/reel_detail.pug
+++ b/dillo/templates/dillo/theater/reel_detail.pug
@@ -8,38 +8,53 @@
 | {% include 'dillo/components/_profile_page_title.pug' with user=user %}
 | {% endblock page_title %}
 
-| {% block base_classes %}swap-direction{% endblock %}
+
+| {% block stream_nav %}
+.nav-tabbar
+  | {% block stream_nav_items %}
+  | {% include 'dillo/theater/_navigation_theater.pug' %}
+  | {% endblock stream_nav_items %}
+
+  | {% include 'dillo/components/_pagination.pug' with page=page_obj is_detail=True prev_obj_url=prev_profile_url next_obj_url=next_profile_url label="Reel" %}
+| {% endblock stream_nav %}
 
 | {% block stream %}
+//- Profile Reel.
 | {% if user.profile.reel %}
 .profile-reel
-	| {{ user.profile.reel | oembed }}
+  | {{ user.profile.reel | oembed }}
 | {% endif %}
 
 | {{ block.super }}
 | {% endblock stream %}
 
+
 | {% block sidebar %}
-.d-flex
-	| {% include 'dillo/components/_pagination.pug' with page=page_obj is_detail=True prev_obj_url=prev_profile_url next_obj_url=next_profile_url %}
-
+//- Profile sidebar avatar and info.
 .sidebar-block
-	| {% include 'dillo/components/_profile_header.pug' with show_bio=True is_link_disabled='is-link-disabled' %}
+  | {% include 'dillo/components/_profile_header.pug' with show_bio=True is_link_disabled='is-link-disabled' %}
 
+
+//- Events attending.
 | {% if user.profile.next_events_attending %}
 .sidebar-block
-	| {% include 'dillo/components/_feed_events.pug' with events=user.profile.next_events_attending events_title='Going To' %}
+  | {% include 'dillo/components/_feed_events.pug' with events=user.profile.next_events_attending events_title='Going To' %}
 | {% endif %}
 
-.sidebar-block
-	| {% include 'dillo/components/_button_share.pug' with shared_object_label='profile' %}
 
+//- Share.
+.sidebar-block
+  | {% include 'dillo/components/_button_share.pug' with shared_object_label='profile' %}
+
+
+//- Whoosh.
 | {% if request.user.is_superuser %}
 .sidebar-block
-	| {% url 'admin:auth_user_change' user.id as edit_url %}
-	| {% trans 'Whoosh User' as edit_label %}
-	| {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label %}
+  | {% url 'admin:auth_user_change' user.id as edit_url %}
+  | {% trans 'Whoosh User' as edit_label %}
+  | {% include 'dillo/components/_button_edit.pug' with url=edit_url label=edit_label %}
 | {% endif %}
 | {% endblock sidebar %}
 
 | {% block body_classes %}profile-details{% endblock %}
+| {% block base_classes %}swap-direction{% endblock %}
