--- a/dillo/templates/dillo/rigs/rig_detail.pug
+++ b/dillo/templates/dillo/rigs/rig_detail.pug
@@ -1,4 +1,4 @@
-| {% extends "dillo/theater/theater_base.pug" %}
+| {% extends "dillo/base_columns.pug" %}
 | {% load i18n %}
 | {% load dillo_filters %}
 | {% load micawber_tags %}
@@ -6,78 +6,83 @@
 
 | {% block page_title %}{{ rig.name }}{% endblock page_title %}
 
-| {% block theater-nav %}
-h1 {{ rig.name }}
-| {% endblock theater-nav %}
 
-| {% block theater-content %}
+| {% block stream_nav %}
+.nav-tabbar
+  | {% block stream_nav_items %}
+  | {% include 'dillo/rigs/_navigation_rig.pug' %}
+  | {% endblock stream_nav_items %}
+
+  | {% include 'dillo/components/_pagination.pug' with page=page_obj is_detail=True prev_obj_url=prev_rig_url next_obj_url=next_rig_url %}
+| {% endblock stream_nav %}
+
+
+| {% block stream %}
 .card
-	| {% thumbnail rig.image "1280" crop="center" as im %}
-	a.card-thumbnail(href="{{ rig.url }}", target="_blank")
-		img(
-			src="{{ im.url }}",
-			width="{{ im.width }}",
-			height="{{ im.height }}",
-			alt="{{ rig.name }}")
-	| {% endthumbnail %}
-	.card-body
-		| {{ rig.description | markdown | safe }}
-| {% endblock theater-content %}
+  | {% thumbnail rig.image "1280" crop="center" as im %}
+  a.card-thumbnail(href="{{ rig.url }}", target="_blank")
+    img(
+      src="{{ im.url }}",
+      width="{{ im.width }}",
+      height="{{ im.height }}",
+      alt="{{ rig.name }}")
+  | {% endthumbnail %}
+  .card-body
+    | {{ rig.description | markdown | safe }}
+| {% endblock stream %}
 
 | {% block sidebar %}
-.d-flex
-	| {% include 'dillo/components/_pagination.pug' with page=page_obj is_detail=True prev_obj_url=prev_rig_url next_obj_url=next_rig_url %}
+.sidebar-block
+  | {% url rig.url as btn_create_url %}
+  | {% trans 'Download Rig' as btn_label %}
+  | {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" icon="i-download" external=True %}
 
 .sidebar-block
-	| {% url rig.url as btn_create_url %}
-	| {% trans 'Download Rig' as btn_label %}
-	| {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" icon="i-download" external=True %}
+  ul.sidebar-list
+    | {% if rig.supported_software %}
+    li(title="{% trans 'Author' %}")
+      i.i-package
+      | {{ rig.supported_software.all|join:", " }}
+    | {% endif %}
 
-	ul.sidebar-list
-		| {% if rig.supported_software %}
-		li(title="{% trans 'Author' %}")
-			i.i-package
-			| {{ rig.supported_software.all|join:", " }}
-		| {% endif %}
+    li(title="{% trans 'Author' %}")
+      i.i-user
+      | {% if rig.author %}
+      | {{ rig.author }}
+      | {% else %}
+      #[a.text-muted(href="{% url 'profile_details' rig.user.username %}", title="{{ rig.user.username }}") {{ rig.user }}]
+      | {% endif %}
 
-		li(title="{% trans 'Author' %}")
-			i.i-user
-			| {% if rig.author %}
-			| {{ rig.author }}
-			| {% else %}
-			#[a.text-muted(href="{% url 'profile_details' rig.user.username %}", title="{{ rig.user.username }}") {{ rig.user }}]
-			| {% endif %}
+  small.text-muted
+    | {% trans 'Posted' %} #[span(title="{{ rig.created_at }}") {{ rig.created_at | timesince | compact_timesince }}] {% trans 'ago' %}
 
-	small.text-muted
-		| {% trans 'Posted' %} #[span(title="{{ rig.created_at }}") {{ rig.created_at | timesince | compact_timesince }}] {% trans 'ago' %}
+  hr
 
-	hr
+  .btn-toolbar-row
 
-	.btn-toolbar-row
+    //- TODO(Pablo): Make into a component.
+    button.btn.btn-link-bg.btn-sidebar(
+      data-like_toggle_url="{% url 'like_toggle' content_type_id=rig.content_type_id object_id=rig.id %}",
+      class="js-like-toggle{% if rig|is_liked:request.user %} is-liked{% endif %}",
+      title="{% if rig|is_liked:request.user %}{% trans 'Unlike' %}{% else %}{% trans 'Like' %}{% endif %}")
+      span
+        i.i-heart
+        span {% if rig|is_liked:request.user %}{% trans 'Liked' %}{% else %}{% trans 'Like' %}{% endif %}
 
-		//- TODO(Pablo): Make into a component.
-		button.btn.btn-link-bg.btn-sidebar(
-			data-like_toggle_url="{% url 'like_toggle' content_type_id=rig.content_type_id object_id=rig.id %}",
-			class="js-like-toggle{% if rig|is_liked:request.user %} is-liked{% endif %}",
-			title="{% if rig|is_liked:request.user %}{% trans 'Unlike' %}{% else %}{% trans 'Like' %}{% endif %}")
-			span
-				i.i-heart
-				span {% if rig|is_liked:request.user %}{% trans 'Liked' %}{% else %}{% trans 'Like' %}{% endif %}
+    | {% include 'dillo/components/_button_share.pug' with shared_object_label='rig' %}
 
-		| {% include 'dillo/components/_button_share.pug' with shared_object_label='rig' %}
+  | {% if rig.user == request.user %}
 
-	| {% if rig.user == request.user %}
+  hr
 
-	hr
+  | {% url 'rig-update' rig.pk as edit_url %}
+  | {% trans 'Edit Rig' as edit_label %}
+  | {% include 'dillo/components/_button_generic.pug' with url=edit_url label=edit_label icon='i-edit' %}
+  | {% endif %}
 
-	| {% url 'rig-update' rig.pk as edit_url %}
-	| {% trans 'Edit Rig' as edit_label %}
-	| {% include 'dillo/components/_button_generic.pug' with url=edit_url label=edit_label icon='i-edit' %}
-	| {% endif %}
-
-	| {% if request.user.is_superuser %}
-	hr
-	| {% url 'admin:rigs_rig_change' rig.id as edit_url %}
-	| {% include 'dillo/components/_button_generic.pug' with url=edit_url label="Whoosh Rig" icon='i-edit' %}
-	| {% endif %}
-	| {% endblock sidebar %}
+  | {% if request.user.is_superuser %}
+  hr
+  | {% url 'admin:rigs_rig_change' rig.id as edit_url %}
+  | {% include 'dillo/components/_button_generic.pug' with url=edit_url label="Whoosh Rig" icon='i-edit' %}
+  | {% endif %}
+| {% endblock sidebar %}
