Account Edit: Fix buttons padding

--- a/dillo/templates/dillo/account_edit_base.pug
+++ b/dillo/templates/dillo/account_edit_base.pug
@@ -12,7 +12,7 @@
 				)
 					span
 						i.i-user
-						| Profile
+						span Profile
 
 				a.btn(
 					href="{% url 'account_change_password' %}",
@@ -20,7 +20,7 @@
 				)
 					span
 						i.i-shield
-						| Change Password
+						span Change Password
 
 				a.btn(
 					href="{% url 'account_email' %}",
@@ -28,7 +28,7 @@
 				)
 					span
 						i.i-mail
-						| Email
+						span Email
 
 				a.btn(
 					href="{% url 'account-email-notifications' %}",
@@ -36,7 +36,7 @@
 				)
 					span
 						i.i-bell
-						| Notifications
+						span Notifications
 
 				a.btn(
 					href="{% url 'account_settings' %}",
@@ -44,7 +44,7 @@
 				)
 					span
 						i.i-settings
-						| Settings
+						span Settings
 
 		.col-9
 			#nav-tabContent.tab-content
