--- a/dillo/templates/dillo/components/_profile_header.pug
+++ b/dillo/templates/dillo/components/_profile_header.pug
@@ -33,11 +33,12 @@
 			//- Social Links
 			| {% for profile_link in user.profile.links.all %}
 			| {% firstof profile_link.social 'Website' as social_site %}
-			a.btn.btn-link-primary.btn-icon(
+			a.btn.btn-icon(
 				data-toggle="tooltip",
 				href="{{ profile_link.url }}",
 				title="{{ social_site | title }}")
-				i(class="i-{% firstof profile_link.social 'link' %}")
+				span
+					i(class="i-{% firstof profile_link.social 'link' %}")
 			| {% endfor %}
 
 		//- Short Bio
@@ -90,6 +91,9 @@
 			| {% endif %}
 
 		| {% if request.user == user %}
+
+		hr
+
 		.sidebar-block
 			| {% url 'profile_edit' as edit_url %}
 			| {% include 'dillo/components/_button_edit.pug' with url=edit_url label="Edit Profile" class="btn-sidebar" %}
