--- a/dillo/templates/dillo/jobs/job_form.pug
+++ b/dillo/templates/dillo/jobs/job_form.pug
@@ -8,11 +8,13 @@
 
 | {% block content_card %}
 form.card(method="post", enctype="multipart/form-data")
-	.card-header
-		h1 {% trans 'Post a Job' %}
-	.card-body
-		| {% csrf_token %}
-		| {{ form | crispy }}
-	.card-cta
-		input.btn.btn-primary.btn-block.my-4(type="submit" value="Submit")
+  .card-header
+    h1 {% trans 'Post a Job' %}
+  .card-body
+    | {% csrf_token %}
+    | {{ form | crispy }}
+
+  .card-cta
+    button.btn.btn-primary(type="submit")
+      span {% trans 'Submit' %}
 | {% endblock content_card %}
