--- a/dillo/templates/socialaccount/snippets/provider_list.pug
+++ b/dillo/templates/socialaccount/snippets/provider_list.pug
@@ -7,16 +7,18 @@
 | {% for brand in provider.get_brands %}
 
 li
-	a(title="{{ brand.name }}",
-		class="social-provider {{provider.id}} {{brand.id}}",
-		href="{% provider_login_url provider.id openid=brand.openid_url process=process %}")
-		i(class="i-{{ brand.id }}")
-		| {{ brand.name }}
+  a(title="{{ brand.name }}",
+    class="social-provider {{provider.id}} {{brand.id}}",
+    href="{% provider_login_url provider.id openid=brand.openid_url process=process %}")
+    span
+      i(class="i-{{ brand.id }}")
+      span {{ brand.name }}
 | {% endfor %}
 | {% endif %}
 li
-	a(title="{{ provider.name }}",
-		class="social-provider {{ provider.id }} btn btn-social-{{ provider.id }} btn-block",
-		href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}")
-		i(class="i-{{ provider.id }}")
+  a(title="{{ provider.name }}",
+    class="social-provider {{ provider.id }} btn btn-social-{{ provider.id }} btn-block",
+    href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}")
+    span
+      i(class="i-{{ provider.id }}")
 | {% endfor %}
